# dotfiles

./: .chezmoi.yaml.tmpl  .chezmoiexternal.yaml  .chezmoiexternal.yaml.tmpl  .chezmoiignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .install-password-manager-and-encryption.sh  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .pre-commit-config.yaml  .prettierignore  .shellcheckrc  .template-merge-driver.sh  .yamllint.yaml  CLAUDE.md  LICENSE  LOGGING_FIX_DEMO.md  MIGRATION_LOG.md  MIGRATION_LOG_ARCHIVE.md  README.md  dot_bash_profile  dot_bashrc  dot_zshenv  dot_zshrc  install.sh  mise.toml  update-to-rust.sh
.cargo/: config.toml
.chezmoidata/: ai.yaml  boot.yaml  colors.yaml  destinations.yaml  developer.yaml  extensions.yaml  features.yaml  (+6 more)
_ai/dcli/: .SRCINFO  Cargo.toml  PKGBUILD  _dcli  benchmark.sh  build-copr.sh  dcli.spec  example-services-config.yaml
_ai/dcli/.opencode/plans/: source-module-impl.md
_ai/dcli/docs/: DIRECTORY-MODULES.md  SOURCES.md
_ai/dcli/docs/dev/: MERGE_SERVICES_FEATURE.md
_ai/dcli/src/: defaults.rs  dotfiles.rs  main.rs  services.rs  theming.rs
_ai/dcli/src/backend/: apt.rs  mod.rs
_ai/dcli/src/commands/: edit.rs  find.rs  generate.rs  hooks.rs  init.rs  repo.rs  search.rs  service.rs  sync.rs
_ai/dcli/src/config/: mod.rs
_ai/dcli/src/lua/: helpers.rs  mod.rs  package.rs
_ai/dcli/src/nix/: mod.rs
_ai/dcli/src/nix_eval/: eval.rs  mod.rs  types.rs
_ai/dcli/src/package/: mod.rs
_ai/dcli/src/sharing/: git.rs  mod.rs
_ai/dcli/src/source/: pkgbuild.rs
_ai/dcli/src/tui/screens/: mod.rs  upload.rs
(+1039 files in other folders)
