[package]
name = "dcli"
version = "0.2.2"
edition = "2021"
authors = ["Don"]
description = "A declarative package management CLI tool for Linux, inspired by NixOS"
license = "0BSD"

[[bin]]
name = "dcli"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (for parallel operations)
tokio = { version = "1.42", features = ["full"] }

# Terminal colors and formatting
colored = "2.1"

# Logging
env_logger = "0.11"
log = "0.4"

# File system utilities
walkdir = "2.5"
glob = "0.3"

# Process execution
which = "7.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1.10"

# System hostname
hostname = "0.4"

# Progress bars and terminal UI
indicatif = "0.17"

# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Temporary files and directories
tempfile = "3.8"

# Lua scripting support
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }

# XDG directory support
dirs = "5.0"

[profile.release]
opt-level = 3
lto = false
codegen-units = 1
strip = true
